solved product id page not showing up and clashes with tailwind

--- a/styles/components/BreadCrum.module.css
+++ b/styles/components/BreadCrum.module.css
@@ -9,6 +9,9 @@
 
     text-decoration: none;
     background-color: white;
+    display: flex;
+    align-items: center;
+    
 
 
 }
