--- a/styles/pages/Login.module.css
+++ b/styles/pages/Login.module.css
@@ -46,11 +46,16 @@
 .loginForm {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: 500px;
     width: 100%;
 }
 
 
+.title{
+    /* font-size: 1.5rem; */
+    margin-bottom: 20px;
+    /* font-weight: 800; */
+}
 .inputGroup {
     margin-bottom: 20px;
     /* border: 2px solid #ccc; */
